--- a/posSystem/Views/Item/ItemEdit.cshtml
+++ b/posSystem/Views/Item/ItemEdit.cshtml
@@ -106,7 +106,7 @@
 
                     <div class="mb-3">
                         <label for="itemStock" class="form-label">Item Stock</label>
-                        <input type="number" class="form-control" id="itemStock" name="itemStock" value="@Model.itemStock">
+                        <input type="number" class="form-control" id="itemStock" name="itemStock" value="0">
                     </div>
 
                     <div class="mb-3">
