--- a/posSystem/Views/Item/ItemIndex.cshtml
+++ b/posSystem/Views/Item/ItemIndex.cshtml
@@ -20,6 +20,9 @@
 <div class="d-flex flex-column flex-sm-row align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-4 mb-sm-0">Item Management</h1>
     <div>
+        <a id="lowStockButton" href="/Item/LowStock" class="btn btn-success mr-2">
+            <i class="fas fa-exclamation-triangle"></i> Low Stock Item (<span id="lowStockCount">0</span>)
+        </a>
         <a href="/Item/Create" class="btn btn-success mr-2">
             <i class="fas fa-plus-circle"></i> Add Item
         </a>
@@ -29,6 +32,9 @@
         <button type="button" id="btnDeleteAll" class="btn btn-danger">
             <i class="fas fa-trash-alt"></i> Delete All Items
         </button>
+        <a>
+            <span id="stockFeedback"></span>
+        </a>
     </div>
 </div>
 
@@ -42,7 +48,7 @@
             new { Field = "itemBuyPrice", Title = "Original Price" },
             new { Field = "itemSalePrice", Title = "Sale Price" },
             new { Field = "itemWholeSalePrice", Title = "Whole Sale Price" },
-            new { Field = "itemStock", Title = "Stock" },
+            new { Field = "itemStock", Title = "Added Stock" },
             new { Field = "itemSold", Title = "Item Sold" },
             new { Field = "itemRemainStock", Title = "Remain Stock" },
             new { Field = "itemCategory", Title = "Category" },
@@ -163,6 +169,62 @@
 
 @section scripts {
     <script>
+        $(document).ready(function () {
+            showLowStock();
+
+            function showLowStock() {
+                $.ajax({
+                    url: "/Item/CheckLowStock",
+                    type: "GET",
+                    dataType: "json",
+                    success: function (response) {
+                        if (response.lowStockCount > 0) {
+                            $('#lowStockButton').removeClass('btn-success').addClass('btn-danger');
+                        } else {
+                            $('#lowStockButton').removeClass('btn-danger').addClass('btn-success');
+                        }
+                        $('#lowStockCount').text(response.lowStockCount);
+                    },
+                    error: function (errormessage) {
+                        console.error('Error:', errormessage.responseText);
+                    }
+                });
+            }
+        });
+
+        $(document).ready(function () {
+            checkLowStock();
+
+            function checkLowStock() {
+                $.ajax({
+                    url: "/Item/Check",
+                    type: "POST",
+                    dataType: "json",
+                    success: function (response) {
+                        if (response.isStockLow) {
+                            Swal.fire({
+                                title: "Low Stock Alert!",
+                                text: "Some products have low stock.",
+                                icon: "warning",
+                                showCancelButton: true,
+                                confirmButtonColor: "#3085d6",
+                                cancelButtonColor: "#d33",
+                                confirmButtonText: "Yes, Show Me!"
+                            }).then((result) => {
+                                if (result.isConfirmed) {
+                                    // Redirect to the low stock items page or perform another action
+                                    location.href = "/Item/LowStock";
+                                }
+                            });
+                        }
+                    },
+                    error: function (errormessage) {
+                        console.error('Error:', errormessage.responseText);
+                    }
+                });
+            }
+        });
+
         // Function to handle delete all operation
         $(document).on('click', '#btnDeleteAll', function () {
             Swal.fire({
