--- a/posSystem/Views/Category/MassUpload.cshtml
+++ b/posSystem/Views/Category/MassUpload.cshtml
@@ -50,7 +50,7 @@
                 formData.append('file', file);
 
                 // Block the element with Notiflix
-                Notiflix.Block.dots('body');
+                //Notiflix.Block.dots('.body');
 
                 // Perform AJAX file upload
                 $.ajax({
@@ -60,7 +60,7 @@
                     contentType: false,
                     processData: false,
                     success: function (result) {
-                        Notiflix.Block.remove('.container'); // Remove block on success
+                        //Notiflix.Block.remove('.body'); // Remove block on success
                         if (result.IsSuccess) {
                             Swal.fire({
                                 title: "Success!",
@@ -81,7 +81,7 @@
                     },
                     error: function (xhr, status, error) {
                         Swal.fire({
-                            Notiflix.Block.remove('.container'); // Remove block on error
+                            //Notiflix.Block.remove('.body'); // Remove block on error
                             title: "Error!",
                             text: "An error occurred while processing the file.",
                             icon: "error"
