--- a/posSystem/Views/Discount/DiscountEdit.cshtml
+++ b/posSystem/Views/Discount/DiscountEdit.cshtml
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="d-grid gap-2">
-                        <button type="button" id="btnUpdate" class="btn btn-success">Update Brand</button>
+                        <button type="button" id="btnUpdate" class="btn btn-success">Update Discount</button>
                         <a href="/Brand" class="btn btn-dark mt-2">Back</a>
                     </div>
                 </div>
