--- a/posSystem/Views/Item/ItemIndex.cshtml
+++ b/posSystem/Views/Item/ItemIndex.cshtml
@@ -21,8 +21,9 @@
     <h1 class="h3 mb-4 mb-sm-0">Item Management</h1>
     <div>
         <a id="lowStockButton" href="/Item/LowStock" class="btn btn-success mr-2">
-            <i class="fas fa-exclamation-triangle"></i> Low Stock Item (<span id="lowStockCount">0</span>)
-        </a>
+    <i class="fas fa-exclamation-triangle"></i> Low Stock Item (<span id="lowStockCount">0</span>)
+</a>
+
         <a href="/Item/Create" class="btn btn-success mr-2">
             <i class="fas fa-plus-circle"></i> Add Item
         </a>
@@ -170,60 +171,48 @@
 @section scripts {
     <script>
         $(document).ready(function () {
-            showLowStock();
+    checkLowStock();
 
-            function showLowStock() {
-                $.ajax({
-                    url: "/Item/CheckLowStock",
-                    type: "GET",
-                    dataType: "json",
-                    success: function (response) {
-                        if (response.lowStockCount > 0) {
-                            $('#lowStockButton').removeClass('btn-success').addClass('btn-danger');
-                        } else {
-                            $('#lowStockButton').removeClass('btn-danger').addClass('btn-success');
+    function checkLowStock() {
+        $.ajax({
+            url: "/Item/CheckLowStock", // Updated to match the controller method
+            type: "GET",
+            dataType: "json",
+            success: function (response) {
+                // Update button class based on low stock count
+                if (response.lowStockCount > 0) {
+                    $('#lowStockButton').removeClass('btn-success').addClass('btn-danger');
+                } else {
+                    $('#lowStockButton').removeClass('btn-danger').addClass('btn-success');
+                }
+
+                // Update the count display
+                $('#lowStockCount').text(response.lowStockCount);
+
+                // Show alert if stock is low
+                if (response.isStockLow) {
+                    Swal.fire({
+                        title: "Low Stock Alert!",
+                        text: "Some products have low stock.",
+                        icon: "warning",
+                        showCancelButton: true,
+                        confirmButtonColor: "#3085d6",
+                        cancelButtonColor: "#d33",
+                        confirmButtonText: "Yes, Show Me!"
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            location.href = "/Item/LowStock";
                         }
-                        $('#lowStockCount').text(response.lowStockCount);
-                    },
-                    error: function (errormessage) {
-                        console.error('Error:', errormessage.responseText);
-                    }
-                });
+                    });
+                }
+            },
+            error: function (errormessage) {
+                console.error('Error:', errormessage.responseText);
             }
         });
+    }
+});
 
-        $(document).ready(function () {
-            checkLowStock();
-
-            function checkLowStock() {
-                $.ajax({
-                    url: "/Item/Check",
-                    type: "POST",
-                    dataType: "json",
-                    success: function (response) {
-                        if (response.isStockLow) {
-                            Swal.fire({
-                                title: "Low Stock Alert!",
-                                text: "Some products have low stock.",
-                                icon: "warning",
-                                showCancelButton: true,
-                                confirmButtonColor: "#3085d6",
-                                cancelButtonColor: "#d33",
-                                confirmButtonText: "Yes, Show Me!"
-                            }).then((result) => {
-                                if (result.isConfirmed) {
-                                    // Redirect to the low stock items page or perform another action
-                                    location.href = "/Item/LowStock";
-                                }
-                            });
-                        }
-                    },
-                    error: function (errormessage) {
-                        console.error('Error:', errormessage.responseText);
-                    }
-                });
-            }
-        });
 
         // Function to handle delete all operation
         $(document).on('click', '#btnDeleteAll', function () {
