code rechecking and minor bugs fix

--- a/posSystem/Views/Member/MemberCreate.cshtml
+++ b/posSystem/Views/Member/MemberCreate.cshtml
@@ -96,7 +96,7 @@
 
                 if (memberEmail) {
                     $.ajax({
-                        url: "/Member/CheckEmail",
+                        url: "/Member/Check",
                         data: { email: memberEmail },
                         type: "POST",
                         dataType: "json",
